--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <script src='/lib/vv_bundle.js'></script>
 
-        <link rel='stylesheet' href='style/main.css'></link>
-        <link rel='stylesheet' href='style/toto-nav.css'></link>
-        <link rel='stylesheet' href='style/toto.css'></link>
-        <link rel='stylesheet' href='style/index.css'></link>
-        <link rel='stylesheet' href='style/fonts.css'></link>
+        <link rel='stylesheet' href='style/main.css'>
+        <link rel='stylesheet' href='style/toto-nav.css'>
+        <link rel='stylesheet' href='style/toto.css'>
+        <link rel='stylesheet' href='style/index.css'>
+        <link rel='stylesheet' href='style/fonts.css'>
     </head>
 
     <body>
