--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 .up('toto')
                 .on('click', click);
 
-        vv('.flex-v.big.toto-code', [
+        vv('.flex-v.tall.toto-code', [
             ['.grow'],
             ['.flex-h', [
                 ['.grow'],
